[package]
name = "encoding-fetcher"
version = "1.2.0"
edition = "2021"
description = "Fetch encoding from url given in parameters"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
sqlite = { version = "0.30" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
base64 = { version = "0.21" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json","env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
